updated package.json for Heroku

--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "comp229-assignment1",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./server.js"
   },
-
-"engines": {
-  "node": "^18.9.1",
-  "npm": "^8.19.1"
-},
-
+  "engines": {
+    "node": "^18.9.1",
+    "npm": "^8.19.1"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
     "bootstrap": "^5.2.1",
@@ -22,5 +20,18 @@
     "jquery": "^3.6.1",
     "morgan": "~1.9.1",
     "popper.js": "^1.16.1"
-  }
+  },
+  "description": "COMP229 Assignment 1",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/superlioning/COMP229_Assignment1.git"
+  },
+  "author": "Ninghua Zhang",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/superlioning/COMP229_Assignment1/issues"
+  },
+  "homepage": "https://github.com/superlioning/COMP229_Assignment1#readme"
 }
